Correciones memoria y anexos [#13]

--- a/doc/proyectdoc/bibliografiaAnexos.bib
+++ b/doc/proyectdoc/bibliografiaAnexos.bib
@@ -3,17 +3,16 @@
 	url = {https://gradle.org/},
 	urldate = {2018-01-04}
 }
-
 @book{claudia,
-	title = {{Memoria tfg, 2017 }},
-	author    = "Martínez Herrero, Claudia"
-	title     = "Memoria tfg UBUGrades",
+	title = {{Memoria TFG, 2017 }},
+	author    = "Martínez Herrero, Claudia",
+	title     = "Memoria TFG UBUGrades",
 	year      = "2017"
 }
 
 @book{claudia:anexo,
-	title = {{Anexo tfg, 2017 }},
-	author    = "Martínez Herrero, Claudia"
+	title = {{Anexo TFG, 2017 }},
+	author    = "Martínez Herrero, Claudia",
 	title     = "Anexo tfg UBUGrades",
 	year      = "2017"
 }
@@ -43,11 +42,6 @@
 	url = {https://www.mysql.com/products/workbench/},
 	urldate = {2017-12-04}
 }
-@misc{Web:sonarqube,
-	title = {{GII-17.1B-UBULog-1.0 - trona85}},
-	url = {https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0},
-	urldate = {2017-12-03}
-}
 @misc{Web:texsturdio,
 	title = {{TeXstudio}},
 	url = {https://www.texstudio.org/},
@@ -59,12 +53,7 @@
 	urldate = {2017-12-03}
 }
 @misc{Web:zenhub,
-	title = {zenhub},
-	url = {https://www.zenhub.com/faq},
-	urldate = {2017-12-03}
-}
-@misc{Web:zenhub,
-	title = {zenhub},
+	title = {ZenHub},
 	url = {https://www.zenhub.com/faq},
 	urldate = {2017-12-03}
 }
@@ -75,7 +64,7 @@
 	urldate = {2017-12-03}
 }
 @misc{Web:texstudio,
-	title = {{TeXstudio}},
+	title = {{TexStudio}},
 	url = {https://www.texstudio.org/},
 	urldate = {2017-12-03}
 }
@@ -83,13 +72,14 @@
 	title = {{SonarQube - GII-17.1B-UBULog-1.0 - Oscar Fernández}},
 	url = {https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0},
 	urldate = {2017-12-03}
-}@misc{web:github,
+}
+@misc{web:github,
 title = {{GitHub}},
 url = {https://github.com/trona85/GII-17.1B-UBULog-1.0},
 year = {2017}
 }
 @misc{web:git,
-	title = {{Git - Documentation}},
+	title = {{Git - Documentati{\'{o}}n}},
 	url = {https://git-scm.com/doc},
 	urldate = {2017-12-03}
 }
@@ -121,7 +111,7 @@ year = {2017}
 	url = {https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0}
 }
 @misc{web:sublime,
-	title = {{Sublime Text 3 - IDE para javaScript y html}},
+	title = {{Sublime Text 3 - IDE para JavaScript y HTML}},
 	url = {https://www.sublimetext.com/3}
 }
 @misc{,
@@ -133,7 +123,7 @@ year = {2017}
 	url = {https://docs.moodle.org/dev/Web{\_}service{\_}API{\_}functions}
 }
 @misc{javascript:chart,
-	title = {{Libreria para generar los graficos - Chart.js {\textperiodcentered} Cocumentaci{\'{o}}n}},
+	title = {{Librería para generar los gráficos - Chart.js {\textperiodcentered} Documentaci{\'{o}}n}},
 	url = {http://www.chartjs.org/docs/latest/}
 }
 @misc{java:calendar,
@@ -177,7 +167,7 @@ year = {2017}
 }
 @article{art:mvc,
 	keywords = {wiki},
-	title = {{modelo vista controlador  — Wikipedia, La enciclopedia libre}},
+	title = {{Modelo vista controlador  — Wikipedia, La enciclopedia libre}},
 	url = {https://es.wikipedia.org/wiki/Modelo–vista–controlador},
 	year = {2017}
 }
