--- a/doc/proyectdoc/memoria.tex
+++ b/doc/proyectdoc/memoria.tex
@@ -430,15 +430,15 @@ D. nombre tutor
 % Abstract en castellano
 \renewcommand*\abstractname{Resumen}
 \begin{abstract}
-Este proyecto trata de crear una aplicación de escritorio, para docentes de la universidad de brugos, aunque se puede extender a cualquiera que tuviera un entorno de moodle por lo menos de la versión 3.3.
+Este proyecto trata de crear una aplicación de escritorio, para docentes de la universidad de brugos, aunque se puede extender a cualquiera que tuviera un entorno de Moodle por lo menos de la versión 3.3.
 
-La aplicación le permitirá logearse en la plataforma de moodle, utilizando el correo web, su contraseña y el dominio, en nuestro caso es https://ubuvirtual.ubu.es. Una vez iniciada la sesión sabremos las asignaturas en las que esta matriculado como profesor o alumno, una vez elegida la asignatura sabremos quien esta matriculado en ella. Una vez aquí podremos ver las interacciones de los log de los alumnos de manera sencilla.
+La aplicación le permitirá loguearse en la plataforma de Moodle, utilizando el correo web, su contraseña y el dominio, en nuestro caso es https://ubuvirtual.ubu.es. Una vez iniciada la sesión sabremos las asignaturas en las que está matriculado como profesor o alumno, una vez elegida la asignatura sabremos quien está matriculado en ella. Una vez aquí podremos ver las interacciones de los log de los alumnos de manera sencilla.
 
 Nuestra aplicación consulta y guarda información de los cursos y los usuarios, a través del web service con una respuesta JSON.
 
-A lo largo de la memoria se explicara todos los pasos del desarrollo con los problemas ocasionados.
+A lo largo de la memoria se explicará todos los pasos del desarrollo con los problemas ocasionados.
 
-Este proyecto es una continuación del proyecto UBUGrades 1.0 pero en vez de sacar estadísticas de las notas, se sacara las interacciones de los diferentes usuarios para mostrarlo de forma amigable a los usuarios.
+Este proyecto es una continuación del proyecto UBUGrades 1.0 pero en vez de sacar estadísticas de las notas, se sacará las interacciones de los diferentes usuarios para mostrarlo de forma amigable a los usuarios.
 \end{abstract}
 
 \renewcommand*\abstractname{Descriptores}
@@ -453,9 +453,9 @@ aprendizaje, web scriping.
 \renewcommand*\abstractname{Abstract}
 \begin{abstract}
 
-This project tries to create a desktop application for teachers of the University of Brugos, although it can be extended to anyone who has a Moodle environment at least of version 3.3.
+This project tries to create a desktop application for teachers of the University of Burgos, although it can be extended to anyone who has a Moodle environment at least of version 3.3.
 
-The application will allow you to login to the moodle platform, using webmail, your password and the domain, in our case it is https://ubuvirtual.ubu.es. Once the session begins, we will know the subjects in which he / she is enrolled as a teacher or student, once the subject is chosen, we will know who is enrolled in it. Once here we can see the interactions of the students' log in a simple way.
+The application will allow you to login to the Moodle platform, using webmail, your password and the domain, in our case it is https://ubuvirtual.ubu.es. Once the session begins, we will know the subjects in which he / she is enrolled as a teacher or student, once the subject is chosen, we will know who is enrolled in it. Once here we can see the interactions of the students' log in a simple way.
 
 Our application consults and saves information about courses and users, through the web service with a JSON response.
 
