--- a/doc/proyectdoc/tex/2_Objetivos_del_proyecto.tex
+++ b/doc/proyectdoc/tex/2_Objetivos_del_proyecto.tex
@@ -9,12 +9,12 @@ realización del proyecto.
 \begin{itemize}
 	\tightlist
 	\item
-	Desarrollar una aplicación de escritorio para poder visualizar las interacciones realizadas en el moodle de la Universidad de Burgos, por los diferentes usuarios, en las distintas asignaturas.
+	Desarrollar una aplicación de escritorio para poder visualizar las interacciones realizadas en el Moodle de la Universidad de Burgos, por los diferentes usuarios, en las distintas asignaturas.
 	\item
 	Facilitar la interpretación de los datos recogidos mediante
 	representaciones gráficas.
 	\item
-	Aportar información extra a los profesores de la asignatura, para saber la interacción que tienen sus alumnos con ella y otros usuarios como puede ser el administrador de moodle.
+	Aportar información extra a los profesores de la asignatura, para saber la interacción que tienen sus alumnos con ella y otros usuarios como puede ser el administrador de Moodle.
 	
 \end{itemize}
 
@@ -27,9 +27,9 @@ realización del proyecto.
 	\item
 	Desarrollar lógica de programación en entorno Java 8
 	\item
-	Utilización de API WebService de moodle para la obtención de diferentes datos.
+	Utilización de API WebService de Moodle para la obtención de diferentes datos.
 	\item
-	Parseo de documentos csv.
+	Parseo de documentos CSV.
 	\item
 	Utilizar Git como sistema de control de versiones distribuido junto
 	con la plataforma GitHub.
