--- a/doc/proyectdoc/tex/4_Tecnicas_y_herramientas.tex
+++ b/doc/proyectdoc/tex/4_Tecnicas_y_herramientas.tex
@@ -61,7 +61,7 @@ Git se distribuye bajo la licencia de \emph{software} libre GNU LGPL v2.1.
 GitHub es una plataforma web donde podemos hospedar nuestro repositorios del proyecto. Nos permite todas las  funcionalidades de Git, revisión de commit, revisión de código, documentación, gestión de tareas.... Es
 gratuita cuando los proyectos son \emph{open source}.
 
-Con el plugin de Chrome Zedhub, en Github, nos permite tener la funcionalidad de canvas para la organización de tareas, como la plataforma Trello. Como estamos utilizando servicios de integración continua, teniendo el repositorio en Github, nos permite la sincronización solo con nuestra cuenta de Github. \cite{web:github}
+Con el plugin de Chrome Zedhub, en GitHub, nos permite tener la funcionalidad de canvas para la organización de tareas, como la plataforma Trello. Como estamos utilizando servicios de integración continua, teniendo el repositorio en GitHub, nos permite la sincronización solo con nuestra cuenta de GitHub. \cite{web:github}
 
 \section{Gestión del proyecto}\label{gestion-del-proyecto}
 
@@ -74,7 +74,7 @@ Con el plugin de Chrome Zedhub, en Github, nos permite tener la funcionalidad de
 	Herramienta elegida: \href{https://www.zenhub.com/}{ZenHub}.
 \end{itemize}
 
-ZenHub es un plugin desarrollado para exploradores web para integrar una nueva vista, más organizativa, en Github. 
+ZenHub es un plugin desarrollado para exploradores web para integrar una nueva vista, más organizativa, en GitHub. 
 
 Proporciona un tablero canvas en donde cada tarea representada se corresponde con un \emph{issue} o tarea, nativo de GitHub. Cada tarea puede ser organizada en el \emph{sprint} al que pertenece con la asignación de ella, su tiempo estimado de realización, etc. Si el proyecto tiene menos de 5 colaboradores es \emph{open source}. \cite{web:zenhub}
 
@@ -85,20 +85,20 @@ Proporciona un tablero canvas en donde cada tarea representada se corresponde co
 \subsection{Java}\label{java}
 
 \subsubsection{eclipse neon}\label{eclipse}
-Es una aplicación con un entorno de desarrollo integrado (\emph{IDE}), nos facilita el trabajo a la hora de programar, nos proporciona un auto completar de métodos y clases y nos enseña, si lo tiene, una descripción de los métodos. Esto nos ayuda en un primer momento si no se conoce la librería a utilizar o los métodos. En nuestro caso lo utilizamos para programación java, aunque nos permite otro lenguaces, como puede ser php.
-Eclipse también nos permite funciones de caracterización que nos ahorran horas de trabajo y podemos conectarlo con git directamente para hacer commit. y ver de forma directa los cambios hechos o los ficheros que no están commiteados.\cite{web:eclipse}
+Es una aplicación con un entorno de desarrollo integrado (\emph{IDE}), nos facilita el trabajo a la hora de programar, nos proporciona un auto completar de métodos y clases y nos enseña, si lo tiene, una descripción de los métodos. Esto nos ayuda en un primer momento si no se conoce la librería a utilizar o los métodos. En nuestro caso lo utilizamos para programación Java, aunque nos permite otro lenguages, como puede ser PHP.
+Eclipse también nos permite funciones de caracterización que nos ahorran horas de trabajo y podemos conectarlo con Git directamente para hacer commit. y ver de forma directa los cambios hechos o los ficheros que no están commiteados.\cite{web:eclipse}
 
 \subsection{LaTeX}\label{latex}
 
 \subsubsection{TexStudio}\label{texstudio}
 
-TeXstudio es un editor para crear documentos LaTeX. Nos permite compilar el documento, previsualizarlo, autocompletarlo, corrección de faltas. Se puede instalar en diferentes sistemas operativos. En el entorno Ubuntu 16.04, la instalación es sencilla, aparte del texStudio solo hay que instalar los paquetes de idiomas y ya podremos empezar a trabajar. \cite{web:texstudio}
+TexStudio es un editor para crear documentos LaTeX. Nos permite compilar el documento, previsualizarlo, autocompletarlo, corrección de faltas. Se puede instalar en diferentes sistemas operativos. En el entorno Ubuntu 16.04, la instalación es sencilla, aparte del texStudio solo hay que instalar los paquetes de idiomas y ya podremos empezar a trabajar. \cite{web:texstudio}
 
 \subsection{JavaScript y HTML}\label{javascript-y-html}
 
 \subsubsection{Sublime Text}\label{sublime-text}
 
-Es una aplicación con un entorno de desarrollo integrado (\emph{IDE}), nos permite desarrollar proyectos en diferentes lenguajes, como python, php , java, html , javascript, etc. Como eclipse no tiene plugins para javaScript hemos optado por programar con sublime para html y javaScript. \cite{web:sublime}
+Es una aplicación con un entorno de desarrollo integrado (\emph{IDE}), nos permite desarrollar proyectos en diferentes lenguajes, como Python, PHP , Java, HTML , JavaScript, etc. Como eclipse no tiene plugins para JavaScript hemos optado por programar con sublime para HTML y JavaScript. \cite{web:sublime}
 
 \section{Servicios de integración
 	continua}\label{servicios-de-integraciuxf3n-continua}
@@ -107,7 +107,7 @@ Es una aplicación con un entorno de desarrollo integrado (\emph{IDE}), nos perm
 
 \subsubsection{TravisCI}\label{travis-ci}
 
-Travis es una herramienta de integración continua que esta alojada en la nube y que podemos sincronizarla con github. Esto nos permite, cada vez que hacemos un commit, montar nuestro proyecto y ejecutar las pruebas de forma automatizada, y cuando termine nos enviara un informe del resultado. \cite{web:travis}
+Travis es una herramienta de integración continua que está alojada en la nube y que podemos sincronizarla con GitHub. Esto nos permite, cada vez que hacemos un commit, montar nuestro proyecto y ejecutar las pruebas de forma automatizada, y cuando termine nos enviara un informe del resultado. \cite{web:travis}
 
 
 %\subsection{Cobertura de código}\label{cobertura-de-codigo}
@@ -137,15 +137,15 @@ es una librería para la creación de interfaces gráficas en Java.
 
 \subsection{Log4j}\label{log4j}
 
-Log4j es una librería de java desarrollada por la compañía Apache software fundation que nos permite en nuestra aplicación escribir mensajes de registro, como pueden ser errores o warnings. También nos permite configurar el filtrado de mensajes para que el programador pueda ver los tipos de errores que desee. \cite{Java:log}
+Log4j es una librería de Java desarrollada por la compañía Apache Software Fundation que nos permite en nuestra aplicación escribir mensajes de registro, como pueden ser errores o warnings. También nos permite configurar el filtrado de mensajes para que el programador pueda ver los tipos de errores que desee. \cite{Java:log}
 
-\subsection{Httpclient}\label{httpclient}
+\subsection{HttpClient}\label{httpclient}
 
-Httpclient es una librería de Google diseñada para java, lo que nos permite es hacer peticiones http. Con esta librería haremos las peticiones a ubuvirtual para que nos de los datos correspondientes. \cite{java:Httpclient}
+HttpClient es una librería de Google diseñada para Java, lo que nos permite es hacer peticiones HTTP. Con esta librería haremos las peticiones a UBUVirtual para que nos de los datos correspondientes. \cite{java:Httpclient}
 
-\subsection{Commons-csv}\label{commons-csv}
+\subsection{Commons-CSV}\label{commons-csv}
 
-Commons-csv es una librería creada por Apache software fundation para java, que nos facilita la obtención de datos de un csv. \cite{java:csvparser}
+Commons-CSV es una librería creada por Apache Software Fundation para Java, que nos facilita la obtención de datos de un CSV. \cite{java:csvparser}
 
 \subsection{HtmlUnit}\label{htmlunit}
 \begin{itemize}
@@ -158,7 +158,7 @@ Commons-csv es una librería creada por Apache software fundation para java, que
 	Herramienta elegida: \href{http://htmlunit.sourceforge.net/}{HtmlUnit}.
 \end{itemize}
 
-HtmlUnit es una librería para java, que nos permite la iteración en páginas web o \emph{web scripting}, nos permite rellenar formularios, hacer click sobre botones, incluso recoger archivos descargados de la web. \cite{Java:htmlunit}
+HtmlUnit es una librería para Java, que nos permite la interacción en páginas web o \emph{web scripting}, nos permite rellenar formularios, hacer clic sobre botones, incluso recoger archivos descargados de la web. \cite{Java:htmlunit}
 %\subsection{JUnit}\label{junit}
 
 
@@ -173,7 +173,7 @@ HtmlUnit es una librería para java, que nos permite la iteración en páginas w
 
 \subsection{Mendeley}\label{mendeley}
 
-\href{https://www.mendeley.com/}{Mendeley} es un gestor de citas bibliográficas. Con el podremos guardar todas las referencias que estemos utilizando y exportarlas a bibtex para latex sin mucho esfuerzo.
+\href{https://www.mendeley.com/}{Mendeley} es un gestor de citas bibliográficas. Con el podremos guardar todas las referencias que estemos utilizando y exportarlas a BibTex para \LaTeX sin mucho esfuerzo.
 
 \subsection{JsonView}\label{jsonview}
 
@@ -187,6 +187,6 @@ HtmlUnit es una librería para java, que nos permite la iteración en páginas w
 
 \href{https://pinta-project.com/pintaproject/pinta/}{Pinta} es una aplicación para Ubuntu que se encarga de la creación y edición de imágenes.
 
-\subsection{MySQL worckbench}\label{pinta}
+\subsection{MySQL WorkBench}\label{pinta}
 
-\href{https://pinta-project.com/pintaproject/pinta/}{MySQL worckbench} es una aplicación para desarrolladores o diseñadores de bases de datos o que tengan que trabajar con bases de datos. Nos permite importar o exportar BD, ver su entidad/relación para saber como se comunican las tablas, saber su estructura, etc. \cite{web:worckbench}
+\href{https://pinta-project.com/pintaproject/pinta/}{MySQL WorkBench} es una aplicación para desarrolladores o diseñadores de bases de datos o que tengan que trabajar con bases de datos. Nos permite importar o exportar BD, ver su entidad/relación para saber como se comunican las tablas, saber su estructura, etc. \cite{web:worckbench}
