--- a/doc/proyectdoc/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/doc/proyectdoc/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -10,13 +10,13 @@ En la finalización del proyecto podemos sacar las siguientes conclusiones.
 	\tightlist
 	\item
 	El objetivo general del proyecto se ha cumplido satisfactoriamente.
-	Ahora los profesores cuentan con una aplicación para poder ver las interacciones de los diferentes usuarios, y hacer comprobaciones entre equipos de alumnos para saber quíen ha interaccionado con ubu-virtual y quien no, para tener un análisis más detallado.
+	Ahora los profesores cuentan con una aplicación para poder ver las interacciones de los diferentes usuarios, y hacer comprobaciones entre equipos de alumnos para saber quién ha interaccionado con UBUVirtual y quién no, para tener un análisis más detallado.
 	\item
 	El proyecto ha sido desarrollado con un claro pensamiento de mantenibilidad. Esto ha conllevado que, al hacer algún cambio de implementación, el tiempo invertido en ello era mínimo. Esta última consideración está ligada también a una nueva implementación.
 	\item
-	Se ha observado la importancia de las herramientas como travis o sonarqube para el desarrollo.
+	Se ha observado la importancia de las herramientas como Travis o SonarQube para el desarrollo.
 	\item
-	El editor de \LaTeX\ ha sido de gran ayuda en la documentación, aunque sea de mayor costumbre utilizar word o writer, ha sido bueno el aprendizaje de esta tecnología para futuros usos en las empresas privadas.
+	El editor de \LaTeX\ ha sido de gran ayuda en la documentación, aunque sea de mayor costumbre utilizar Word o Writer, ha sido bueno el aprendizaje de esta tecnología para futuros usos en las empresas privadas.
 	\item
 	Hay que tener cuidado con la documentación que existe en internet, aunque sea la oficial, en alguna librería utilizada la documentación conducía a errores de implementación y hay que observar el propio código.
 	\item
@@ -31,11 +31,11 @@ En la finalización del proyecto podemos sacar las siguientes conclusiones.
 \begin{itemize}
 	\tightlist
 	\item
-	Buscar funciones de la API Web Service de moodle para dar información más concreta al usuario, diciéndole, por ejemplo, información concreta de cuestionarios, preguntas, contenido, etc....
+	Buscar funciones de la API Web Service de Moodle para dar información más concreta al usuario, diciéndole, por ejemplo, información concreta de cuestionarios, preguntas, contenido, etc....
 	\item
 	Investigar la mejora de tiempos del Web Scripting o incluso buscar una librería mejor para este proceso. El tiempo que tarda en descargar los log es muy grande y cuánto más grande es el log aumenta, de tal forma, que puede llegar a bloquear la aplicación.
 	\item
-	Como en los log tenemos la ip por donde se han conectado a ubu-virtual, podríamos hacer estadísticas de por donde se conectan las personas o incluso hacer minería con estos datos para saber cuando se conectan más.
+	Como en los log tenemos la IP por donde se han conectado a UBUVirtual, podríamos hacer estadísticas de por donde se conectan las personas o incluso hacer minería con estos datos para saber cuándo se conectan más.
 	\item
 	Añadir más tipos de gráficos. Hemos metido 3, pero convendría poner más tipos ya que hay muchos tipos de usuarios y para diferentes datos habrá gustos diferentes de gráficos.
 	\item
@@ -43,6 +43,6 @@ En la finalización del proyecto podemos sacar las siguientes conclusiones.
 	\item
 	Implementar traducciones para tener una aplicación en diferentes idiomas.
 	\item
-	Ampliar formatos de lectura de registros a xlsx, html, jsom, odt.
+	Ampliar formatos de lectura de registros a .xlsx, .html, .jsom, .odt.
 	
 \end{itemize}
