--- a/doc/proyectdoc/tex/C_Diseno.tex
+++ b/doc/proyectdoc/tex/C_Diseno.tex
@@ -36,7 +36,7 @@ Nuestro modelo de datos se corresponde con lo siguiente:
 
 \subsection{Diseño de paquetes}
 
-El código de la aplicación esta organizado de la siguiente manera:
+El código de la aplicación está organizado de la siguiente manera:
 
 \begin{itemize}
 	\tightlist
@@ -63,7 +63,7 @@ El código de la aplicación esta organizado de la siguiente manera:
 		
 		\imagen{ubulogexception}{Paquete ubulogexception.}
 		\item
-		\textbf{Webservice}: servicios web para la obtención de datos en moodle.
+		\textbf{Webservice}: Servicios Web para la obtención de datos en Moodle.
 		
 		\imagen{webservice}{Paquete webservice.}
 		
