--- a/doc/proyectdoc/tex/E_Manual_usuario.tex
+++ b/doc/proyectdoc/tex/E_Manual_usuario.tex
@@ -45,7 +45,7 @@ En el login observamos 3 campos que deberemos rellenar:
 	\item
 	\textbf{Usuario:} Correo de la personal UBU.
 	\item
-	\textbf{Contraseña:} Contraseña utilizada para iniciar sesión en ubu-virtual.
+	\textbf{Contraseña:} Contraseña utilizada para iniciar sesión en UBUVirtual.
 	\item
 	\textbf{Host:} Dirección web de la plataforma a donde nos queremos conectar. Por defecto esta https://ubuvirtual.ubu.es/.
 \end{itemize}
@@ -55,9 +55,9 @@ Una vez introduzcamos los campos tenemos 2 opciones:
 \begin{itemize}
 	\tightlist
 	\item
-	\textbf{Clickar borrar:} Se borraran los campos.
+	\textbf{Clicar borrar:} Se borrarán los campos.
 	\item
-	\textbf{Clickar entrar:} Pueden suceder 2 cosas:
+	\textbf{Clicar entrar:} Pueden suceder 2 cosas:
 	\begin{itemize}
 		\tightlist
 		\item
@@ -74,7 +74,7 @@ Cuando nos logueemos en nuestra aplicación llegaremos a la pantalla de bienveni
 
 \imagen{bienvenida}{Pantalla de bienvenida.}
 
-Cuando clickemos en entrar pueden pasar 2 cosas:
+Cuando hagamos clic en entrar pueden pasar 2 cosas:
 
 \begin{itemize}
 	\tightlist
@@ -91,7 +91,7 @@ Cuando clickemos en entrar pueden pasar 2 cosas:
 
 \subsubsection{Visualización de participantes}
 
-En esta parte de la aplicación veremos los participantes de la asignatura (matriculados, desconocidos, sistema y administrador), nos dira el numero de participantes y tendremos 3 filtros:
+En esta parte de la aplicación veremos los participantes de la asignatura (matriculados, desconocidos, sistema y administrador), nos dirá el número de participantes y tendremos 3 filtros:
 
 
 \begin{itemize}
@@ -108,7 +108,7 @@ En esta parte de la aplicación veremos los participantes de la asignatura (matr
 
 \imagen{participantes}{Visualización de participantes.}
 
-Esta sección de la aplicación estará deshabilitada hasta que se cargue el log. Una vez cargado podremos interactuar con el para mostrar los datos en la gráfica y en la tabla de log.
+Esta sección de la aplicación estará deshabilitada hasta que se cargue el log. Una vez cargado podremos interactuar con él para mostrar los datos en la gráfica y en la tabla de log.
 
 \subsubsection{Visualización de eventos}
 
@@ -133,7 +133,7 @@ En esta parte de la aplicación podremos ver los log correspondientes a los dato
 
 \subsubsection{Botones inferiores}
 
-En esta parte de la aplicación podremos clickar los siguientes botones y su comportamiento es el siguiente:
+En esta parte de la aplicación podremos clicar los siguientes botones y su comportamiento es el siguiente:
 
 \begin{itemize}
 	\tightlist
@@ -144,7 +144,7 @@ En esta parte de la aplicación podremos clickar los siguientes botones y su com
 	\item
 	\textbf{Cargar documento online:} Carga los datos del log de forma automatizada. Este proceso puede tardar varios minutos.
 	\item
-	\textbf{Cargar documento local:} Habiendo descargado el log de la asignatura en csv, podemos pasárselo a la aplicación directamente y cargar los datos. Este proceso es mas eficiente que el punto anterior.
+	\textbf{Cargar documento local:} Habiendo descargado el log de la asignatura en csv, podemos pasárselo a la aplicación directamente y cargar los datos. Este proceso es más eficiente que el punto anterior.
 	\item
 	\textbf{Salir:} Cierra la aplicación.
 	
@@ -153,7 +153,7 @@ En esta parte de la aplicación podremos clickar los siguientes botones y su com
 
 \imagen{botonesinferiores}{Botones inferiores.}
 
-Esta sección de la aplicación estará deshabilitada hasta que se cargue el log. Una vez cargado podremos interactuar con el para mostrar los datos en la gráfica y en la tabla de log.
+Esta sección de la aplicación estará deshabilitada hasta que se cargue el log. Una vez cargado podremos interactuar con él para mostrar los datos en la gráfica y en la tabla de log.
 
 \subsubsection{Información del usuario}
 
