--- a/doc/proyectdoc/anexos.tex
+++ b/doc/proyectdoc/anexos.tex
@@ -33,7 +33,7 @@
 % Imagenes
 \usepackage{graphicx}
 \newcommand{\imagen}[2]{
-	\begin{figure}[!h]
+	\begin{figure}[]
 		\centering
 		\includegraphics[width=0.9\textwidth]{#1}
 		\caption{#2}\label{fig:#1}
