--- a/doc/proyectdoc/bibliografia.bib
+++ b/doc/proyectdoc/bibliografia.bib
@@ -4,7 +4,7 @@
 	urldate = {2018-01-04}
 }
 @book{claudia,
-		title = {{Memoria tfg, 2017 }},
+		title = {{Memoria TFG, 2017 }},
 	author    = "Martínez Herrero, Claudia"
 	title     = "Memoria tfg UBUGrades",
 	year      = "2017"
@@ -58,12 +58,7 @@
 	urldate = {2017-12-03}
 }
 @misc{Web:zenhub,
-	title = {zenhub},
-	url = {https://www.zenhub.com/faq},
-	urldate = {2017-12-03}
-}
-@misc{Web:zenhub,
-	title = {zenhub},
+	title = {ZenHub},
 	url = {https://www.zenhub.com/faq},
 	urldate = {2017-12-03}
 }
@@ -74,7 +69,7 @@
 	urldate = {2017-12-03}
 }
 @misc{Web:texstudio,
-	title = {{TeXstudio}},
+	title = {{TexStudio}},
 	url = {https://www.texstudio.org/},
 	urldate = {2017-12-03}
 }
@@ -88,7 +83,7 @@
 	year = {2017}
 }
 @misc{web:git,
-	title = {{Git - Documentation}},
+	title = {{Git - Documentati{\'{o}}n}},
 	url = {https://git-scm.com/doc},
 	urldate = {2017-12-03}
 }
@@ -120,7 +115,7 @@
 	url = {https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0}
 }
 @misc{web:sublime,
-	title = {{Sublime Text 3 - IDE para javaScript y html}},
+	title = {{Sublime Text 3 - IDE para JavaScript y HTML}},
 	url = {https://www.sublimetext.com/3}
 }
 @misc{,
@@ -132,7 +127,7 @@
 	url = {https://docs.moodle.org/dev/Web{\_}service{\_}API{\_}functions}
 }
 @misc{javascript:chart,
-	title = {{Libreria para generar los graficos - Chart.js {\textperiodcentered} Cocumentaci{\'{o}}n}},
+	title = {{Librería para generar los gráficos - Chart.js {\textperiodcentered} Documentaci{\'{o}}n}},
 	url = {http://www.chartjs.org/docs/latest/}
 }
 @misc{java:calendar,
@@ -176,7 +171,7 @@ year = {2008}
 }
 @article{art:mvc,
 keywords = {wiki},
-title = {{modelo vista controlador  — Wikipedia, La enciclopedia libre}},
+title = {{Modelo vista controlador  — Wikipedia, La enciclopedia libre}},
 url = {https://es.wikipedia.org/wiki/Modelo–vista–controlador},
 year = {2017}
 }
