--- a/doc/proyectdoc/tex/1_Introduccion.tex
+++ b/doc/proyectdoc/tex/1_Introduccion.tex
@@ -1,15 +1,15 @@
 \capitulo{1}{Introducción}
 
 Los profesores, hoy en día, utilizan plataformas para poder facilitar su trabajo, proporcionando recursos, haciendo exámenes o teses, de manera on-line. No es que se quede anticuada la forma tradicional de impartir clases, si no que evoluciona, para facilitar el trabajo a ellos mismos y a los alumnos.
-La más utilizada y a la vez la que estamos utilizando en la Universidad de Burgos es moodle, en concreto la versión 3.3.
+La más utilizada y a la vez la que estamos utilizando en la Universidad de Burgos es Moodle, en concreto la versión 3.3.
 
-\imagen{citymoodle}{Estadística de ciudades que más utilizan moodle.}
+\imagen{citymoodle}{Estadística de ciudades que más utilizan Moodle.}
 
-\imagen{cytiremoodle}{Datos de uso de moodle.}
+\imagen{cytiremoodle}{Datos de uso de Moodle.}
 
 \imagen{versionmoodle}{Versiones más utilizadas.}
 
-Lo que queremos conseguir aprovechando el potencial de moodle, es, una aplicación de escritorio, en la que podremos pasar el log correspondiente, que nos lo generan los registros de moodle en cada asignatura y el profesor puede acceder a ellos sin ningún problema, para facilitarle su interpretación, con un muestreo de los datos en formato de gráficas, filtrando por usuarios de esa asignatura (contando con el usuario administrador, el usuario sistema, usuario invitado y desconocido, como no sabemos los usuarios exactos que hay en los moodle de producción, los colocaremos en desconocidos para controlar su interacción en la asignatura) y los tipos de evento realizado. 
+Lo que queremos conseguir aprovechando el potencial de Moodle, es, una aplicación de escritorio, en la que podremos pasar el log correspondiente, que nos lo generan los registros de Moodle en cada asignatura y el profesor puede acceder a ellos sin ningún problema, para facilitarle su interpretación, con un muestreo de los datos en formato de gráficas, filtrando por usuarios de esa asignatura (contando con el usuario administrador, el usuario sistema, usuario invitado y desconocido, como no sabemos los usuarios exactos que hay en los Moodle de producción, los colocaremos en desconocidos para controlar su interacción en la asignatura) y los tipos de evento realizado. 
 Con esto podremos permitir al profesor un control de su asignatura, casi completo. Por ejemplo, podrá saber cuántas veces un alumno ha entrado en calificaciones, ha subido un trabajo, hasta si un administrador ha estado visitando su asignatura o creado nuevos elementos en ella.
 
 
@@ -72,9 +72,9 @@ Además, los siguientes recursos están accesibles a través de internet:
 \begin{itemize}
 	\tightlist
 	\item
-	\href{https://github.com/trona85/GII-17.1B-UBULog-1.0}{Código público en el repositorio de Github.}
+	\href{https://github.com/trona85/GII-17.1B-UBULog-1.0}{Código público en el repositorio de GitHub.}
 	\item
-	\href{https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0}{Análisis de la calidad del código con Sonarqube.}
+	\href{https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0}{Análisis de la calidad del código con SonarQube.}
 	\item
 	\href{https://travis-ci.org/trona85/GII-17.1B-UBULog-1.0/}{Integración continua del proyecto con Travis CI.}
 	
