--- a/doc/proyectdoc/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
+++ b/doc/proyectdoc/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
@@ -4,7 +4,7 @@ Este apartado pretende recoger los aspectos más interesantes del desarrollo del
 
 \section{Inicio del proyecto}\label{inicio-del-proyecto}
 
-El proyecto comenzó el 3 de octubre del 2017. La idea surgió de un tfg anterior el de Claudia Martínez Herrero \cite{claudia} en el cual se iniciaba sesión en ubu-virtual y tenía que sacar con gráficas las notas de los diferentes alumnos. Al tutor Raúl Marticorena Sánchez, se le ocurrió dar una vuelta a esa idea y partiendo de ese tfg, queríamos sacar las estadísticas de las interacciones de los diferentes usuarios de ubu-virtual en una asignatura concreta para poder mostrarlo al profesor de forma más amigable.
+El proyecto comenzó el 3 de octubre del 2017. La idea surgió de un tfg anterior el de Claudia Martínez Herrero \cite{claudia} en el cual se iniciaba sesión en UBUVirtual y tenía que sacar con gráficas las notas de los diferentes alumnos. Al tutor Raúl Marticorena Sánchez, se le ocurrió dar una vuelta a esa idea y partiendo de ese tfg, queríamos sacar las estadísticas de las interacciones de los diferentes usuarios de UBUVirtual en una asignatura concreta para poder mostrarlo al profesor de forma más amigable.
 
 \imagen{logo}{Logo UBULog.}
 
@@ -21,13 +21,13 @@ Algunas tecnologías utilizadas en el proyecto requerían formación antes de em
 	\item
 	Aplicación UBUGrades, se tuvo que probar y refactorizar el código para facilitar su lectura y saber que partes nos valían y cuales podríamos desechar.
 	\item
-	Librería common-csv-1.5, se investigó su javaDoc para saber si nos podía parsear nuestros documentos.
+	Librería Common-csv-1.5, se investigó su JavaDoc para saber si nos podía parsear nuestros documentos.
 	\item
-	Liberia HtmlUnit, Se tuvo que investigar la librería y hacer diferentes pruebas antes de su implementación
+	Librería HtmlUnit, Se tuvo que investigar la librería y hacer diferentes pruebas antes de su implementación
 	\item
-	Liberia Calendar, se investigó su javaDoc antes de empezar con la implementación, en un primer momento nu funciono y se tuvo que analizar el código debuggeando, se vio que el javaDoc estaba mal documentado y se vio como utilizar esta librería de forma correcta.
+	Librería Calendar, se investigó su JavaDoc antes de empezar con la implementación, en un primer momento no funciono y se tuvo que analizar el código debuggeando, se vio que el JavaDoc estaba mal documentado y se vio como utilizar esta librería de forma correcta.
 	\item
-	Libería chart.js, se miró la documentación \cite{javascript:chart} y se analizó su código para su implementación.
+	Librería chart.js, se miró la documentación \cite{javascript:chart} y se analizó su código para su implementación.
 \end{itemize}
 
 \section{Decisiones técnicas}\label{decisiones-tecnicas}
@@ -36,7 +36,7 @@ Este proyecto ha sido una continuación parcial de proyecto de Claudia Martínez
 
 \subsection{Utilización de Moodle y sus servicios web}\label{utilizacióndemoodleysusserviciosweb}
 
-La única diferencia en este punto es, que nosotros no hemos generado calificaciones, ya que nosotros no lo necesitamos, porque vamos a mirar las interacciones de los usuarios con el log que genera moodle (la descarga del log se explicara en la guía de usuario).
+La única diferencia en este punto es, que nosotros no hemos generado calificaciones, ya que nosotros no lo necesitamos, porque vamos a mirar las interacciones de los usuarios con el log que genera Moodle (la descarga del log se explicara en la guía de usuario).
 
 \subsection{Funciones utilizadas}\label{funciones-utilizadas}
 
@@ -62,13 +62,13 @@ No se aporta nada nuevo.
 
 \subsection{Generar gráficos}\label{generar-graficos}
 
-Para generar los gráficos, ya que se ha optado por la librería chart.js que es de javaScript, necesitaremos un html para poder ejecutar ese java script y mostrarlo en la etiqueta HTML5 <canvas>. En un primer momento, se consideró que el .html iría en resources y el .js que esta creado en tiempo de ejecución igual. Todo funcionaba de forma correcta hasta que se generó el .jar, dado que en el .jar no se puede escribir, nos empezó a dar excepciones de que ese archivo no existía, entonces optamos por generarlos en tiempo de ejecución todos los archivos. Así solucionamos los problemas de ejecución en el .jar.
+Para generar los gráficos, ya que se ha optado por la librería chart.js que es de JavaScript, necesitaremos un HTML para poder ejecutar ese javaScript y mostrarlo en la etiqueta HTML5 <canvas>. En un primer momento, se consideró que el .html iría en resources y el .js que esta creado en tiempo de ejecución igual. Todo funcionaba de forma correcta hasta que se generó el .jar, dado que en el .jar no se puede escribir, nos empezó a dar excepciones de que ese archivo no existía, entonces optamos por generarlos en tiempo de ejecución todos los archivos. Así solucionamos los problemas de ejecución en el .jar.
 
 Cabe destacar que cuando se cierra la aplicación nos aseguramos de eliminar los archivos generados.
 
 A continuación explicaremos los métodos correspondientes para generar los gráficos.
 
-\subsubsection{Constructor}\label{constructor}
+\subsubsection{Constructor}\label{constructor-c}
 
 Con el crearemos el objeto Chart.
 
@@ -76,33 +76,33 @@ Con el crearemos el objeto Chart.
 
 \subsubsection{HTML}\label{html}
 
-El html necesario para las gráficas, se genera en tiempo de ejecución. El método con el cual se genera es el siguiente.
+El HTML necesario para las gráficas, se genera en tiempo de ejecución. El método con el cual se genera es el siguiente.
 
 \imagen{charthtml}{Código HTML para el gráfico.}
 
 \subsubsection{CSS}\label{css}
 
-El css necesario para las gráficas, se genera en tiempo de ejecución. El método con el cual se genera es el siguiente.
+El CSS necesario para las gráficas, se genera en tiempo de ejecución. El método con el cual se genera es el siguiente.
 
 \imagen{chartcss}{Código CSS del gráfico.}
 
 \subsubsection{Utils.js}\label{utils}
 
-El javaScript necesario para generar gráficas, se genera en tiempo de ejecución. El método con el cual se genera es el siguiente.
+El JavaScript necesario para generar gráficas, se genera en tiempo de ejecución. El método con el cual se genera es el siguiente.
 
 \imagen{chartutil}{Código utils.js necesario para el gráfico.}
 
 \subsubsection{chart.js}\label{chart-js}
 
-El javaScript necesario para las gráficas, se genera en tiempo de ejecución. El método con el cual se genera es el siguiente.
+El JavaScript necesario para las gráficas, se genera en tiempo de ejecución. El método con el cual se genera es el siguiente.
 
 \imagen{generategrafica}{Código chart general.js.}
 
-En este código lo que hacemos es poner la configuración del gráfico, el tipo, y los datos. Las fechas las insertamos en este método, para insertar los datos que queremos mostrar las gráficas llamamos al método setDataSetJavaScript pasándole el objeto printerWriter, el código es el siguiente.
+En este código lo que hacemos es poner la configuración del gráfico, el tipo, y los datos. Las fechas las insertamos en este método, para insertar los datos que queremos mostrar las gráficas llamamos al método setDataSetJavaScript pasándole el objeto PrinterWriter, el código es el siguiente.
 
 \imagen{setdatasetjavascript}{Código chart datos.js.}
 
-En este código generamos tantos dataset como tengamos ya almacenamos con el número de interacciones correspondientes. Para obtener estos datos el método que almacena los datos es el siguiente.
+En este código generamos tantos DataSet como tengamos ya almacenamos con el número de interacciones correspondientes. Para obtener estos datos el método que almacena los datos es el siguiente.
 
 \imagen{setlabel1}{Código que obtiene datos para el gráfico 1.}
 \imagen{setlabel2}{Código que obtiene datos para el gráfico 2.}
@@ -131,7 +131,7 @@ En la condición más compleja, que es seleccionar ambas, lo que ocurre, es:
  
  Cabe destacar que cuando se cierra la aplicación nos aseguramos de eliminar los archivos generados.
  
- Con este html tenemos el mismo problema que en la generación de gráficas en la ejecución de .jar, con lo cual lo generamos en tiempo de ejecución de la misma manera.
+ Con este HTML tenemos el mismo problema que en la generación de gráficas en la ejecución de .jar, con lo cual lo generamos en tiempo de ejecución de la misma manera.
  
 \subsubsection{HTML}\label{html-tabla-log}
  
@@ -142,7 +142,7 @@ Creamos las cabeceras y una vez hecho eso recorremos cada log para obtener sus d
 
 \subsection{Web Scripting}\label{web-scripting}
 
-Con web scripting lo que queremos conseguir es la automatización de la descarga de logs.
+Con Web Scripting lo que queremos conseguir es la automatización de la descarga de logs.
 
 Hemos observado que con la descarga de logs considerablemente grandes(con 20.000 instancias) el tiempo se incrementa considerablemente, es muchísimo más rápido la descarga manual del log. Se ha observado que, si se intenta descargar con una conexión wifi, la aplicación puede llegar a colgarse de tal manera que haya que hacer un kill.
 
@@ -150,24 +150,24 @@ Hablaremos del código en las siguientes sub-secciones.
 
 \subsubsection{Constructor}\label{constructor}
 
-En el cargaremos la web de ubu-virtual e iniciaremos sesión.
+En el cargaremos la web de UBUVirtual e iniciaremos sesión.
 
-\imagen{webconst}{Constructor web scripting.}
+\imagen{webconst}{Constructor Web Scripting.}
 
 \subsubsection{Responsive Web}\label{responsive-web}
 
-Una vez iniciado sesión cargamos la url correspondiente con todos los log, sin ningún tipo de filtro, del curso en el que estamos.
+Una vez iniciado sesión cargamos la URL correspondiente con todos los log, sin ningún tipo de filtro, del curso en el que estamos.
 
-Recogemos la respuesta que nos da al hacer click en el input de descarga y guardamos la respuesta en un csv temporal.
+Recogemos la respuesta que nos da al hacer clic en el input de descarga y guardamos la respuesta en un CSV temporal.
 
 El código correspondiente es el siguiente.
 
-\imagen{webdown}{Constructor web scripting.}
+\imagen{webdown}{Método getResponsiveWeb.}
 
 
 \subsection{Decisiones en cuanto a la interfaz}\label{decisiones-en-cuanto-a-la-interfaz}
 
-El proyecto a partido del diseño del tfg de Claudia Martínez Herrero \cite{claudia} con algunas modificaciones.
+El proyecto a partido del diseño del TFG de Claudia Martínez Herrero \cite{claudia} con algunas modificaciones.
 
 \subsection{Ventana de bienvenida}\label{ventana-de-bienvenida}
 
@@ -185,7 +185,7 @@ el resultado es el siguiente.
 
 \imagen{aplicacionp}{Ventana de principal UBULog.}
 
-El primer cambio importante que se observa, es que, si no se tiene un log cargado, los filtros, las selecciones de eventos y participantes quedan deshabilitadas hasta que se carga e log.
+El primer cambio importante que se observa es que, si no se tiene un log cargado, los filtros, las selecciones de eventos y participantes quedan deshabilitadas hasta que se carga e log.
 
 Se añade la foto del profesor que ha iniciado sesión.
 
