--- a/doc/proyectdoc/tex/A_Plan_proyecto.tex
+++ b/doc/proyectdoc/tex/A_Plan_proyecto.tex
@@ -39,13 +39,13 @@ Al inicio del proyecto se propuso utilizar una metodología ágil, en concreto S
 	\item
 	Se estimaba el tiempo de realización de las tareas a realizar en el \emph{canvas}.
 	\item
-	Para monitorizar el progreso del proyecto se utilizan los gráficos generados en github.
+	Para monitorizar el progreso del proyecto se utilizan los gráficos generados en GitHub.
 	
 \end{itemize}
 
 \subsection{Sprint 1 (03/10/17 -
 	10/10/17)}\label{sprint-1-0031017---101017}
-Este \emph{sprint} fue el comienzo del proyecto, aunque en reuniones previas se hablo con el tutor de las propuestas que tenia para la elección del proyecto, una vez el tutor (Raúl Marticorena Sanchez) acepto tutorizar al alumno (Oscar Fernández Armengol) se puedo empezar el desarrollo.
+Este \emph{sprint} fue el comienzo del proyecto, aunque en reuniones previas se habló con el tutor de las propuestas que tenía para la elección del proyecto, una vez el tutor (Raúl Marticorena Sánchez) acepto tutorizar al alumno (Oscar Fernández Armengol) se puedo empezar el desarrollo.
 
 Los objetivos fueron:
 \begin{itemize}
@@ -55,12 +55,12 @@ Los objetivos fueron:
 	\item
 	Familiarización con la aplicación heredada \href{https://github.com/claumartinezh/TFG_UBUGrades}{UBUGrades}.
 	\item
-	Investigación del web service de moodle
+	Investigación del Web Service de Moodle
 	\item
 	Creación de un esqueleto del proyecto para poder empezar a trabajar.
 	
 \end{itemize}
-El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/1?closed=1}{Sprint 1} se estimo en 6 días de trabajo y se realizo en esos 6 días.
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/1?closed=1}{Sprint 1} se estimó en 6 días de trabajo y se realizó en esos 6 días.
 
 \imagen{sprint1}{Sprint 1.}
 
@@ -75,11 +75,11 @@ Los objetivos fueron:
 	\item
 	Diagrama del modelo de datos.
 	\item
-	Parseo de documentos csv.	
+	Parseo de documentos CSV.	
 	
 \end{itemize}
 
-El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/2?closed=1}{Sprint 2} se estimo en 6 días de trabajo y se realizo en esos 6 días.
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/2?closed=1}{Sprint 2} se estimó en 6 días de trabajo y se realizó en esos 6 días.
 
 \imagen{sprint2}{Sprint 2.}
 
@@ -90,25 +90,25 @@ Los objetivos fueron:
 \begin{itemize}
 	\tightlist
 	\item
-	Integración continua con travis CI.
+	Integración continua con Travis CI.
 	\item
-	Integración de  sonarqube.
+	Integración de  SonarQube.
 	\item
-	Recoger token con web service.	
+	Recoger token con Web Service.	
 	\item
-	Recoger las asignaturas en las que imparte como profesor el usuario logeado.
+	Recoger las asignaturas en las que imparte como profesor el usuario logueado.
 	\item
 	Referencia al usuario con su id en el parseo.
 	\item
 	Interfaz de usuario, primeros pasos.
 	\item
-	Limpieza del carpetas innecesarias en el repositorio.
+	Limpieza de las carpetas innecesarias en el repositorio.
 	
 \end{itemize}
 
 En este sprint, cabe destacar, la integración de Travis\cite{web:travis} y SonarQube \cite{web:sonarqube} para optimizar el tiempo de desarrollo, ya que delegamos en estas herramientas las pruebas y el análisis del código.
 
-El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/3?closed=1}{Sprint 3} se estimo en 7 días de trabajo y se realizo en esos 6 días.
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/3?closed=1}{Sprint 3} se estimó en 7 días de trabajo y se realizó en esos 6 días.
 
 \imagen{sprint3}{Sprint 3.}
 
@@ -131,7 +131,7 @@ Los objetivos fueron:
 
 En este sprint, cabe destacar, la creación de usuarios ficticios, ya que hay usuarios que tienen interacciones en las asignaturas y nos interesa saber que están haciendo.
 
-El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/4?closed=1}{Sprint 4} se estimo en 5 días de trabajo y se realizo en esos 6 días.
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/4?closed=1}{Sprint 4} se estimó en 5 días de trabajo y se realizó en esos 6 días.
 
 \imagen{sprint4}{Sprint 4.}
 
@@ -152,9 +152,9 @@ Los objetivos fueron:
 	
 \end{itemize}
 
-En este sprint, cabe destacar, el nuevo diseño para la ventana principal, la antigua no era re-dimensionable y como había que implementar nuevos filtros y botones mas adelante, se opto por rehacerla.
+En este sprint, cabe destacar, el nuevo diseño para la ventana principal, la antigua no era re-dimensionable y como había que implementar nuevos filtros y botones más adelante, se optó por rehacerla.
 
-El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/5?closed=1}{Sprint 5} se estimo en 7 días de trabajo y se realizo en esos 6 días.
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/5?closed=1}{Sprint 5} se estimó en 7 días de trabajo y se realizó en esos 6 días.
 
 \imagen{sprint5}{Sprint 5.}
 
@@ -171,15 +171,15 @@ Los objetivos fueron:
 	\item
 	Creación de botón para generar las gráficas.	
 	\item
-	Instalar sublime text para la edición de html y javascript.
+	Instalar Sublime Text para la edición de HTML y JavaScript.
 	\item
 	Contar los logs para las gráficas.
 	
 \end{itemize}
 
-En este sprint, cabe destacar, la utilización de la librería chart para la generación de gráficos. Como el gráfico es cambiante dependiendo de los filtros pulsados, optamos en generar los html y javaScript en tiempo de ejecución.
+En este sprint, cabe destacar, la utilización de la librería Chart.js para la generación de gráficos. Como el gráfico es cambiante dependiendo de los filtros pulsados, optamos en generar los HTML y JavaScript en tiempo de ejecución.
 
-El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/6?closed=1}{Sprint 6} se estimo en 8 días de trabajo y se realizo en esos 7 días.
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/6?closed=1}{Sprint 6} se estimó en 8 días de trabajo y se realizó en esos 7 días.
 
 \imagen{sprint6}{Sprint 6.}
 
@@ -194,13 +194,13 @@ Los objetivos fueron:
 	\item
 	Ordenar selección de eventos.
 	\item
-	imagen de usuario logeado.	
+	imagen de usuario logueado.	
 	\item
 	UTF-8 para el gráfico.
 	
 \end{itemize}
 
-El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/7?closed=1}{Sprint 7} se estimo en 8 días de trabajo y se realizo en esos 5 días.
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/7?closed=1}{Sprint 7} se estimó en 8 días de trabajo y se realizó en esos 5 días.
 
 \imagen{sprint7}{Sprint 7.}
 
@@ -225,11 +225,11 @@ Los objetivos fueron:
 	
 \end{itemize}
 
-En este sprint, cabe destacar, el cambio en el parseo, dado que había incongruencias entre los log de pruebas y los reales, para evitar eso, se implementa con la librería common-csv \cite{Java:csv}, con ella cogemos los datos correspondientes a la columna concreta y nos evitamos que en las pruebas el usuario sea "alumno apellido1 apellido2" y en producción sea "apellido1 apellido2, alumno".
+En este sprint, cabe destacar, el cambio en el parseo, dado que había incongruencias entre los log de pruebas y los reales, para evitar eso, se implementa con la librería Common-csv \cite{Java:csv}, con ella cogemos los datos correspondientes a la columna concreta y nos evitamos que en las pruebas el usuario sea ''alumno apellido1 apellido2'' y en producción sea ''apellido1 apellido2, alumno''.
 
-Por otra parte, también es interesante la implementación de las tablas, donde el usuario de la aplicación puede ver los log filtrados y desgranar aun mas los datos con filtros adicionales.
+Por otra parte, también es interesante la implementación de las tablas, donde el usuario de la aplicación puede ver los log filtrados y desgranar aún más los datos con filtros adicionales.
 
-El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/8?closed=1}{Sprint 8} se estimo en 10 días de trabajo y se realizo en esos 6 días.
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/8?closed=1}{Sprint 8} se estimó en 10 días de trabajo y se realizó en esos 6 días.
 
 \imagen{sprint8}{Sprint 8.}
 
@@ -240,21 +240,21 @@ Los objetivos fueron:
 \begin{itemize}
 	\tightlist
 	\item
-	Sacar filtros del html a nuestra interfaz.
+	Sacar filtros del HTML a nuestra interfaz.
 	\item
 	Implementar funcionalidad filtros de tabla de logs y cargar la nueva gráfica con los log resultantes.
 	\item
-	Investigar la utilización de web scraping para nuestra aplicación.
+	Investigar la utilización de Web Scraping para nuestra aplicación.
 	\item
-	Crear botones en la interfaz para coger el csv de forma automática.
+	Crear botones en la interfaz para coger el CSV de forma automática.
 	\item
 	Implementar funcionalidad de botón documento online.
 	
 \end{itemize}
 
-En este sprint, cabe destacar, la investigación del web scraping, se estimo que se haría en 5 días mas 3 dias de implementación, en una mañana, se pudieron probar las librerías Jsoup, Selenium y htmlUnit. Las dos primeras se descartaron, Selenium por problemas de ubicación de exploradores porque no podemos saber en donde el usuario los tendrá instalados y lo descartamos y Jsoup solo parsea la web, no nos deja interaccionar con ella. Con la librería htmlUnt hicimos pruebas y conseguimos traernos los datos correspondientes, en la misma mañana pudimos hacer el trabajo que esperábamos hacer en 8 días.
+En este sprint, cabe destacar, la investigación del Web Scraping, se estimó que se haría en 5 días más 3 días de implementación, en una mañana, se pudieron probar las librerías Jsoup, Selenium y HtmlUnit. Las dos primeras se descartaron, Selenium por problemas de ubicación de exploradores porque no podemos saber donde el usuario los tendrá instalados y lo descartamos y Jsoup solo parsea la web, no nos deja interaccionar con ella. Con la librería htmlUnit hicimos pruebas y conseguimos traernos los datos correspondientes, en la misma mañana pudimos hacer el trabajo que esperábamos hacer en 8 días.
 
-El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/9?closed=1}{Sprint 9} se estimo en 15 días de trabajo y se realizo en esos 3 días.
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/9?closed=1}{Sprint 9} se estimó en 15 días de trabajo y se realizó en esos 3 días.
 
 \imagen{sprint9}{Sprint 9.}
 
@@ -283,7 +283,7 @@ Los objetivos fueron:
 	
 \end{itemize}
 
-El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/10?closed=1}{Sprint 10} se estimo en 12 días de trabajo y se realizo en esos 5 días.
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/10?closed=1}{Sprint 10} se estimó en 12 días de trabajo y se realizó en esos 5 días.
 
 \imagen{sprint10}{Sprint 10.}
 
@@ -304,13 +304,11 @@ Los objetivos fueron:
 	
 \end{itemize}
 
-Este es el ultimo spring del proyecto, y el mas largo, se completara la memoria, anexos, documentación de código y se arreglaran bugs que se han observado durante el desarrollo y el testeo manual.
+Este es el último spring del proyecto, y el más largo, se completará la memoria, anexos, documentación de código y se arreglaran bugs que se han observado durante el desarrollo y el testeo manual.
 
 El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/11?closed=1}{Sprint 10}
 
 %\imagen{sprint11}{Sprint 11.}
-
-FALTA IMASLKEFÑSJFDÑASJF
 
 
 \section{Estudio de viabilidad}
@@ -323,7 +321,7 @@ En el desglose podemos diferenciarlo en las siguientes categorías.
 
 \subsubsection{Costes de personal}
 
-El proyecto se lleva a cabo por un programador a media jornada ya que esta de practicas en otra empresa 25H/S, empezando en Octubre del 2017 asta Enero del 2018.
+El proyecto se lleva a cabo por un programador a media jornada ya que esta de prácticas en otra empresa 25H/S, empezando en Octubre del 2017 hasta Enero del 2018.
 
 \tablaSmallSinColores{Coste personal}{l c c}{costepersonal}
 { \multicolumn{1}{c }{Concepto} & Coste \\}{ 
@@ -341,7 +339,7 @@ El proyecto se realiza con el ordenador personal y se considera la amortización
 
 \tablaSmallSinColores{Coste hardware}{l c c}{costehardware}
 { \multicolumn{1}{l}{Concepto} & Coste & Coste amortizado \\}{ 
-	Portatil & 1.000 & 4.86 \\
+	Portátil & 1.000 & 4.86 \\
 	\\
 	Total & 1000 & 4.86  \\
 } 
